--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"nodemon": "^2.0.4"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"bcryptjs": "^2.4.3",
 		"connect-session-knex": "^2.0.0",
 		"cors": "^2.8.5",
